[gd_scene load_steps=14 format=3 uid="uid://bhh6o2g40ltts"]

[ext_resource type="Script" path="res://game_over.gd" id="1_e0opt"]
[ext_resource type="Texture2D" uid="uid://dmpnccadxiiug" path="res://textures/backgrounds/gridround.png" id="2_vk2pg"]
[ext_resource type="PackedScene" uid="uid://7n5hv8bu6tv6" path="res://player.tscn" id="2_xecjr"]
[ext_resource type="Shader" path="res://textures/shader/ps1_camera_dither.gdshader" id="3_5b2c6"]
[ext_resource type="PackedScene" uid="uid://bdkuewmky4lx" path="res://ball.tscn" id="3_5ekim"]
[ext_resource type="Script" path="res://interfacemain.gd" id="4_hmkse"]
[ext_resource type="Script" path="res://targets.gd" id="4_q84kf"]
[ext_resource type="Script" path="res://targets_dva.gd" id="6_67irx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cxch1"]
shader = ExtResource("3_5b2c6")
shader_parameter/color_depth = 2
shader_parameter/dithering = true
shader_parameter/resolution_scale = 4

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kxevy"]
normal = Vector2(-1, 0)
distance = -65.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jsrea"]
normal = Vector2(1, 0)
distance = -73.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jyal0"]
normal = Vector2(0, 1)
distance = -85.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ju2vw"]
distance = -715.0

[node name="game" type="Node"]
script = ExtResource("1_e0opt")
metadata/_edit_vertical_guides_ = [1120.0]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_cxch1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(1280, 720)

[node name="2dworld" type="Node2D" parent="SubViewportContainer/SubViewport"]

[node name="Sprite2D" type="Sprite2D" parent="SubViewportContainer/SubViewport/2dworld"]
texture = ExtResource("2_vk2pg")
centered = false

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport/2dworld"]
position = Vector2(640, 370)

[node name="player" parent="SubViewportContainer/SubViewport/2dworld" instance=ExtResource("2_xecjr")]
position = Vector2(550, 658)

[node name="world_boundary" type="Node2D" parent="SubViewportContainer/SubViewport/2dworld"]
position = Vector2(165, 2)

[node name="StaticBody2D" type="StaticBody2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary" groups=["wall"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary/StaticBody2D"]
position = Vector2(889, 233)
shape = SubResource("WorldBoundaryShape2D_kxevy")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary/StaticBody2D"]
position = Vector2(49, 243)
shape = SubResource("WorldBoundaryShape2D_jsrea")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary/StaticBody2D"]
position = Vector2(50, 225)
shape = SubResource("WorldBoundaryShape2D_jyal0")

[node name="Line2D" type="Line2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary/StaticBody2D"]
position = Vector2(-50, 139)
points = PackedVector2Array(940, 0, 100, 0, 100, 570, 940, 570, 940, 0)
width = 6.0
default_color = Color(0.229, 0.181, 0.717, 0.887)

[node name="StaticBody2D2" type="StaticBody2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary" groups=["floor"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/2dworld/world_boundary/StaticBody2D2"]
shape = SubResource("WorldBoundaryShape2D_ju2vw")

[node name="RigidBody2D" parent="SubViewportContainer/SubViewport/2dworld" instance=ExtResource("3_5ekim")]
position = Vector2(421, 663)

[node name="targets" type="Node2D" parent="SubViewportContainer/SubViewport/2dworld"]
script = ExtResource("4_q84kf")

[node name="targets_dva" type="Node2D" parent="SubViewportContainer/SubViewport/2dworld"]
script = ExtResource("6_67irx")

[node name="interfacemain" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_hmkse")

[node name="player_hit_rich" type="RichTextLabel" parent="interfacemain"]
visible = false
layout_mode = 0
offset_left = 394.0
offset_top = 6.0
offset_right = 842.0
offset_bottom = 97.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/normal_font_size = 65
text = "ball hit you!"

[node name="player_health" type="RichTextLabel" parent="interfacemain"]
layout_mode = 0
offset_left = 13.0
offset_top = 67.0
offset_right = 443.0
offset_bottom = 183.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/normal_font_size = 65

[node name="bossHP" type="RichTextLabel" parent="interfacemain"]
layout_mode = 0
offset_left = 933.0
offset_top = 66.0
offset_right = 1068.0
offset_bottom = 142.0
theme_override_colors/font_outline_color = Color(0, 0, 0.960784, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/normal_font_size = 55

[node name="ItemList" type="ItemList" parent="interfacemain"]
layout_mode = 0
offset_left = 278.0
offset_top = 207.0
offset_right = 856.0
offset_bottom = 551.0
theme_override_colors/font_outline_color = Color(8.85606e-06, 0.780883, 0.977636, 1)
theme_override_colors/font_color = Color(0.844032, 0.161139, 0.665315, 1)
theme_override_constants/outline_size = 4
theme_override_constants/v_separation = 15
theme_override_constants/h_separation = 36
theme_override_font_sizes/font_size = 24
item_count = 7
max_columns = 6
item_0/text = "test 1 "
item_1/text = "test 2 "
item_2/text = "test 3"
item_3/text = "4RTH BOSS HERE"
item_4/text = "5th boss"
item_5/text = "sixtboss 6"
item_6/text = "seventhbs7"

[node name="CheckButton" type="CheckButton" parent="interfacemain/ItemList"]
layout_mode = 0
offset_left = 408.0
offset_top = 313.0
offset_right = 577.0
offset_bottom = 344.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "immortal mode"

[node name="ballkiller" type="CheckButton" parent="interfacemain/ItemList"]
layout_mode = 0
offset_left = 452.0
offset_top = 284.0
offset_right = 567.0
offset_bottom = 315.0
text = "ballkiller
"

[node name="ball_noflor" type="RichTextLabel" parent="interfacemain"]
layout_mode = 0
offset_left = 1106.0
offset_top = 245.0
offset_right = 1226.0
offset_bottom = 365.0
theme_override_colors/default_color = Color(0.0975142, 0.0101037, 0.00777023, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 56

[connection signal="timeout" from="Timer" to="interfacemain" method="_on_timer_timeout"]
[connection signal="item_clicked" from="interfacemain/ItemList" to="interfacemain" method="_on_item_list_item_clicked"]
